# agent-skills

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  run_tests.sh  run_unit_tests.sh
docs/: agents-best-practices.md  agents-docs.md  agents-patterns.md  agents-repo-structure.md  agents-skill-standards.md  agents-style-guide.md  agents-testing.md  agents-troubleshooting.md  agents-uv-dependency.md
docs/manual-test/: INDEX.md  README.md  SETUP-GUIDE.md  instruct.md  test-aria2.md
openspec/changes/aria2-json-rpc-skill/: CONFIGURATION.md  MILESTONES.md  design.md  proposal.md  tasks.md
skills/aria2-json-rpc/: SKILL.md  config.example.json
skills/aria2-json-rpc/assets/: config.example.json
skills/aria2-json-rpc/references/: RELEASE_NOTES_M1.md  RELEASE_NOTES_M2.md  RELEASE_NOTES_M3.md  aria2-methods.md  execution-guide.md  troubleshooting.md
skills/aria2-json-rpc/scripts/: command_mapper.py  config_loader.py  rpc_client.py  websocket_client.py
skills/quote0-dot-screen/: SKILL.md  task.md
skills/quote0-dot-screen/references/: api.md
skills/quote0-dot-screen/scripts/: api_client.py  device_status.py  display_image.py  display_text.py  list_devices.py  list_tasks.py  switch_next.py
tests/: README.md
tests/integration/: mock_aria2_server.py  test_mock_server.py
tests/integration/llm_eval/: EXECUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPENCODE_INTEGRATION.md  QUICK_REFERENCE.md  README.md  __init__.py  aggregator.py  config.opencode.yaml  (+5 more)
tests/unit/: test_command_mapper.py  test_config_loader.py  test_milestone3.py  test_rpc_client.py
(+28 files in other folders)
